# kapp

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
examples/: README.md  events.rs  hello.rs  hello_async.rs  keyboard_input.rs  log_events.rs  mouse_down.rs  mouse_move.rs  multiple_windows.rs  no_gl.rs  ogl33.rs  opengl_context.rs  platformer.rs  red.rs  simple_gl.rs  state_tracking.rs  threads.rs  trackpad.rs  triangle.rs  user_event.rs  window.rs  window_controls.rs
examples/no_gl/: Cargo.toml
examples/no_gl/src/: main.rs
examples/ogl33/: Cargo.toml
examples/ogl33/src/: main.rs
examples/web_build/: index.html
gl_context/: Cargo.toml
gl_context/examples/: simple_gl.rs  triangle.rs
gl_context/src/: common.rs  gl_context_builder.rs  gl_context_trait.rs  ios.rs  lib.rs  macos.rs  web.rs  windows.rs
gl_context/src/web/: kapp_gl_library.js  kapp_gl_module.js  mod.rs
gl_context/src/windows/: mod.rs
kapp_platform_common/: Cargo.toml
kapp_platform_common/src/: events.rs  platform_traits.rs  window_id.rs
kapp_platforms/: Cargo.toml
kapp_platforms/src/: lib.rs
kapp_platforms/src/ios/: application_ios.rs  events_ios.rs  mod.rs  uikit.rs
kapp_platforms/src/linux/: application_linux.rs  keys_linux.rs  mod.rs
kapp_platforms/src/macos/: apple.rs  application_mac.rs  events_mac.rs  keys_mac.rs  mod.rs  window_mac.rs
kapp_platforms/src/sdl/: keys_sdl.rs  mod.rs
kapp_platforms/src/web/: application_web.rs  event_loop_web.rs  kapp.js  kapp_library.js  kapp_module.js  keys_web.rs  mod.rs
kapp_platforms/src/windows/: application_windows.rs  event_loop_windows.rs  external_windows.rs
platform_common/: Cargo.toml
platform_common/src/: application_messages.rs  event_receiver.rs  events.rs  keys.rs  lib.rs  mouse_buttons.rs  platform_traits.rs  redraw_manager.rs  single_value_channel.rs  window_id.rs  window_parameters.rs
src/: app_parameters.rs  application.rs  application_message.rs  async_application.rs  buttons.rs  cursors.rs  events.rs  gl_context_windows.rs  keys.rs  keys_windows.rs  lib.rs  platform_traits.rs  state_tracker.rs  utils_windows.rs  window.rs  window_builder.rs  window_parameters.rs  windows.rs
src/gl/: gl_context.rs  mod.rs
src/macos/: apple.rs  application_mac.rs  async_application.rs  event_loop_macos.rs  events_mac.rs  gl_context.rs  keys_mac.rs  mod.rs  window_mac.rs  window_manager_macos.rs
src/web/: application_web.rs  event_loop_web.rs  gl_context_web.rs  keys_web.rs  mod.rs  window_manager_web.rs
src/windows/: application_windows.rs  event_loop_windows.rs  gl_context_windows.rs  keys_windows.rs  mod.rs  window_manager_windows.rs
