[package]
name = "kapp"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2018"
license = "zlib"

[features]
gl_context = ["kapp_gl_context"]
default = ["gl_context"]

[dependencies]
kapp_gl_context = { path = "./gl_context", optional = true }
kapp_platforms = { path = "./kapp_platforms" }
#web-sys = "0.3.45"