[package]
name = "kapp_platforms"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
raw-window-handle = "0.3.3"
kapp_platform_common = { path = "../kapp_platform_common" }

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="ios")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="windows")'.dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.64"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.35"
features = [
    "console",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "PointerEvent",
    "KeyboardEvent",
    "WheelEvent",
    "Event",
    "WebGlContextAttributes",
    "Window"
]

