[package]
name = "kapp_platforms"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[lib]

[dependencies]
raw-window-handle = "0.3.3"
kapp_platform_common = { path = "../kapp_platform_common" }

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="windows")'.dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.*"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.*"
features = [
    "console",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "PointerEvent",
    "KeyboardEvent",
    "WheelEvent",
    "Event",
    "WebGlContextAttributes",
    "Window",
    "Element",
    "CssStyleDeclaration"
]

